--- a/src/dx-excshell-1/web-src/src/index.css
+++ b/src/dx-excshell-1/web-src/src/index.css
@@ -5,7 +5,15 @@
 
 html,
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: "hidden";
+}
+
+html, body, body > div, .app {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
 }
 
 .basic-url{
@@ -23,7 +31,9 @@ body {
 
 .webhook-url {
   font-weight: 500;
-  margin-right: 10px;
+  font-size:medium;
+  margin-right: 0px;
+  margin-top: 2px;
 }
 
 .webhook-url-channel {
